frontend/tests/cases/negative/interfaces/kind-mismatch/kindMismatchBetweenInterfaceConstraintAndInterfaceParameter.gr
interface Simple (a : Type)

-- 'a' needs to have kind 'Type' for 'Simple',
-- but 'Type -> Type' for Simple2
interface {Simple a} => Simple2 (a : Type -> Type)
